BREAKING CHANGE: downgrade jdk to 8